fix(poke-lounge):육성 파티 경쟁전 V2 보완
